--- a/_layouts/advisory.html
+++ b/_layouts/advisory.html
@@ -1,15 +1,18 @@
 ---
-layout: default
+layout: post
 ---
-<div class="post">
 
-  <header class="post-header">
-    <h1 class="post-title">{{ page.title }}</h1>
-    <p class="post-meta">{{ page.date | date: "%b %-d, %Y" }}{% if page.author %} • {{ page.author }}{% endif %}{% if page.meta %} • {{ page.meta }}{% endif %}</p>
-  </header>
+<dl class="advisory-info">
+    <dt>Advisory ID:</dt>
+    <dd>{{ page.advisory_id }}</dd>
+    <dt>Version:</dt>
+    <dd>{{ page.advisory_version }}</dd>
+    <dt>Security risk:</dt>
+    <dd>{{ page.advisory_risk }}</dd>
+    <dt>Exploitable from:</dt>
+    <dd>{{ page.exploitable }}</dd>
+    <dt>Vulnerability:</dt>
+    <dd>{{ page.vulnerability }}</dd>
+</dl>
 
-  <article class="post-content">
-    {{ content }}
-  </article>
-
-</div>
+{{ content }}
