Updated advisory layout

--- a/_layouts/advisory.html
+++ b/_layouts/advisory.html
@@ -10,9 +10,9 @@ layout: post
     <dt>Security risk:</dt>
     <dd>{{ page.advisory_risk }}</dd>
     <dt>Exploitable from:</dt>
-    <dd>{{ page.exploitable }}</dd>
+    <dd>{{ page.advisory_exploitable }}</dd>
     <dt>Vulnerability:</dt>
-    <dd>{{ page.vulnerability }}</dd>
+    <dd>{{ page.advisory_vulnerability }}</dd>
 </dl>
 
 {{ content }}
