--- a/_layouts/advisory.html
+++ b/_layouts/advisory.html
@@ -4,15 +4,15 @@ layout: post
 
 <dl class="advisory-info">
     <dt>Advisory ID:</dt>
-    <dd>{{ page.advisory_id }}</dd>
+    <dd>{{ advisory_id }}</dd>
     <dt>Version:</dt>
-    <dd>{{ page.advisory_version }}</dd>
+    <dd>{{ advisory_version }}</dd>
     <dt>Security risk:</dt>
-    <dd>{{ page.advisory_risk }}</dd>
+    <dd>{{ advisory_risk }}</dd>
     <dt>Exploitable from:</dt>
-    <dd>{{ page.advisory_exploitable }}</dd>
+    <dd>{{ advisory_exploitable }}</dd>
     <dt>Vulnerability:</dt>
-    <dd>{{ page.advisory_vulnerability }}</dd>
+    <dd>{{ advisory_vulnerability }}</dd>
 </dl>
 
 {{ content }}
